- Fix problem removing the add button from the PNG when exporting the graph - Fix problem displaying the weight value of quality cell in safari - Fix error hiding tooltip on firefox

--- a/src/app/graph/views/cell/cell.component.scss
+++ b/src/app/graph/views/cell/cell.component.scss
@@ -36,7 +36,7 @@
     background-color: #555;
     color: #fff;
     font-size: 0.5em;
-    position: relative;
-    top: -5px;
+    position: fixed;
+    top: 2px;
     left: 2px;
 }
